# KinectFusionLib

./: .gitignore  BUILD.bazel  CMakeLists.txt  LICENSE.txt  README.md
include/: data_types.h  kinectfusion.h
src/: kinectfusion.cpp  pose_estimation.cpp  surface_measurement.cpp
src/cuda/: extract_pointcloud.cu  marching_cubes.cu  pose_estimation.cu  surface_measurement.cu  surface_prediction.cu  surface_reconstruction.cu
src/cuda/include/: common.h  mc_tables.h
